# to_err_is_antenna

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  simobserve.last
examples/: config.yaml
tests/: __init__.py  test_core.py
to_err_is_antenna/: __init__.py  cli.py  config.py  corrupt.py  selectors.py
